# swarm-in-progress

./: .cursorrules  .gitignore  ADMIN_INTERFACE_GUIDE.md  AI_INFERENCE_TEST_REPORT.md  BACKUP_SYSTEM_DOCUMENTATION.md  BREADCRUMBS.md  CODE_FRAGMENT.rs  COMPLETE_USAGE_GUIDE.md  CONNECTION_LOG_ANALYSIS.md  Cargo.toml  Cargo.toml.bak  DEPLOY_SERVER_TO_EAGLEONEONLINE.md  DEPLOY_SHARDS_TO_RENDEZVOUS.md  DHT_ARCHITECTURE.md  DHT_CODE_REFERENCE.md  DHT_DISCOVERY_DIAGNOSIS.md  DHT_QUORUM_FAILED_EXPLAINED.md  DHT_RECORD_NOT_FOUND_EXPLAINED.md  DIAGNOSE_SHARD_LOADING_BLOCK.md  DIAGNOSTIC_STEPS.md  DIAGNOSTIC_SUMMARY.md  DISTRIBUTED_INFERENCE_CASE_STUDY.md  DISTRIBUTED_INFERENCE_IMPLEMENTATION_PLAN.md  EXTERNAL_IP_CONNECTION.md  FAIL2BAN_SETUP.md  FIX_404.md  FIX_SHARD_0_MANUAL.md  INFERENCE_DEBUG_TRACE.md  INTEGRATION_EXAMPLE.md  INTENSIVE_TEST_README.md  KADEMLIA_GUIDE.md  LLAMA_DISTRIBUTED_PROCESSING.md  LOAD_TEST_FEATURES.md  MINIMAL_EXAMPLE.rs  MONITORING_GUIDE.md  MONITOR_CONNECTION_ISSUE.md  MONITOR_QUICKSTART.md  MULTI_NODE_OUTCOMES_PLAIN_ENGLISH.md  MULTI_NODE_TEST_OUTCOMES.md  NODE_COMMUNICATION_GUIDE.md  (+133 more)
.cargo/: config.toml
backup_20251227_132714/: shard_listener.rs
backup_binaries_20251227_111141/: listener.rs  monitor.rs  node.rs  node_runner.rs  server.rs  shard_listener.rs  web_server.rs
backup_pre_quic_20251226_115104/: Cargo.toml  lib.rs.bak  llama_fragment_processor.rs.bak  llama_model_loader.rs  pipeline_coordinator.rs.bak  torrent_client.rs
backup_pre_release_20251228_054353/: .gitignore  CURSOR_BROWSER_INFERENCE.md  Cargo.toml  DHT_CODE_REFERENCE.md  DIAGNOSTIC_SUMMARY.md  FINAL_TEST_PROOF.md  INFERENCE_FIX_SUMMARY.md  INFERENCE_TEST_RESULTS.md  INTEGRATION_EXAMPLE.md  INTENSIVE_TEST_README.md  LOAD_TEST_FEATURES.md  MONITORING_GUIDE.md  PROOF_OF_TEST.md  PROOF_OF_TEST_RESULTS.md  PROTOCOL_ANALYSIS.md  PROTOCOL_COMPLIANCE_REPORT.md  PROTOCOL_FLAWS_SUMMARY.md  QUICK_START.md  START_STATUS.md  TENSOR_LOADING_EXPLAINED.md  TESTBED_GUIDE.md  TESTING_REPORT.md  TEST_RESULTS_FINAL.md  TORRENT_AUTO_PROPAGATION.md  TORRENT_PROPAGATION_TEST_REPORT.md  WEB_MONITORING_SYSTEM.md  WHY_ONLY_1_SHARD.md  add_ssh_key.ps1  check_tensor_loading.ps1  deploy_to_rsync.ps1  download_shards_wsl.sh  monitor_web_server_compilation.ps1  monitor_web_server_compilation_live.ps1  restart_and_monitor.ps1  restart_and_test.ps1  run_test.ps1  show_inference_results.ps1  split_gguf_proper.py  split_gguf_shards.ps1  split_gguf_shards.sh  (+9 more)
backup_release_20251228_054152/: COMMUNICATION_BREAKDOWN_ANALYSIS.md  COMPILATION_FIX.md  DHT_ROUTING_FIX.md  ERROR_LOGGING_UPDATE.md  HOW_TO_SEE_CHANGES.md  KADEMLIA_GUIDE.md  NODE_REGISTRATION_UI_RESULTS.md  NODE_SPAWNING_DIAGNOSTIC.md  OPEN_CURSOR_BROWSER_NOW.md  PUSH_TO_NEW_REPO.md  SHARD_ASSIGNMENT_ANALYSIS.md  SHARD_NODE_ONLINE_PROTOCOL.md  SHOW_RESULTS.md  SIMPLE_USAGE.md  SINGLE_NODE_INFERENCE_GUIDE.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TORRENT_PROPAGATION_REPORT.md  TORRENT_SEEDING_UPDATE.md  TORRENT_SHARD_LOADING.md  VERIFICATION_GUIDE.md  build_and_split_gguf.sh  check_node_discovery.ps1  check_shard_nodes.ps1  check_torrent_and_shards.ps1  check_web_server_status.ps1  comprehensive_web_test.ps1  deep_search_wsl.sh  diagnose_dht_discovery.ps1  diagnose_web_server.ps1  download_huggingface_gguf.ps1  download_huggingface_gguf.sh  find_safetensors_wsl.sh  investigate_communication_breakdown.ps1  list_rsync_files.ps1  list_rsync_safetensors.ps1  monitor_system.ps1  run_real_inference.py  search_all_safetensors_wsl.sh  (+12 more)
docs/: ANONYMOUS_SHARD_ACCESS.md  COMPLETE_GUIDE.md  DIALER.md  LISTENER.md  MARKETING_MATERIALS.md  MARKETING_MATERIALS.md.bak  NODE_DOCUMENTATION.md  PROJECT_GOAL_AND_BREADCRUMBS.md  QUIC_E2E_TESTS.md  QUIC_TRANSPORT.md  README.md  REAL_INFERENCE_DISTRIBUTED_SERVING.md  SERVER.md  SYSTEM_DOCUMENTATION.md
examples/: ai_query_client.rs  llama_demo.rs  partial_pipeline_demo.rs  proof_of_concept_inference.rs  real_inference_test.rs  shard_discovery_client.rs.bak  shard_inference_test.rs  simple_client.rs  spawn_and_query.rs  test_cat_query.rs  test_node_spawning.rs
src/: ai_inference_handler.rs  capability_collector.rs  client_helper.rs  command_protocol.rs  command_protocol.rs.bak  command_validation.rs  dialer.rs  kademlia_shard_discovery.rs  kademlia_shard_discovery.rs.bak  lib.rs  lib.rs.bak  listener.rs  llama_cpp_backend.rs  llama_inference.rs  message.rs  metrics.rs  monitor.rs  pipeline_coordinator.rs  protocol_logging.rs  quic_transport.rs  (+7 more)
(+74 files in other folders)
