[package]
name = "punch-simple"
version = "0.1.0"
edition = "2021"
authors = ["punch-simple"]
description = "Simple libp2p rendezvous client and server"

[dependencies]
libp2p = { version = "0.53", features = ["quic", "noise", "tcp", "dns", "macros", "kad", "identify", "yamux", "tokio", "request-response", "ping", "relay"] }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sha2 = "0.10"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"

[[bin]]
name = "listener"
path = "src/listener.rs"

[[bin]]
name = "dialer"
path = "src/dialer.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"
